--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -27,8 +27,8 @@ link(rel='manifest', href='manifest.json')
 meta(name='msapplication-TileColor', content='#2196F3')
 meta(name='msapplication-TileImage', content='ms-icon-144x144.png')
 meta(name='theme-color', content='#2196F3')
-link(rel="stylesheet", type="text/css", href="style.css")
-//-style
+//-link(rel="stylesheet", type="text/css", href="style.css")
+style
     include ../../static/css/style.css
 script
     include ../../static/js/fonts.js
