Update styles, templates add ghost theme files
Updated styles modified templates and added ghost theme handlebar files
to start building the theme.

--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -9,3 +9,7 @@ $text: #616161; // 263238
 $whitesection: #f8f8f8;
 $blacksection: #232323;
 
+$javascript: #FDD835;
+$nodejs: #8BC34A;
+$css: #42A5F5;
+$html: #FF5722;
