--- a/src/app/templates/_includes/_sections/_ghost.jade
+++ b/src/app/templates/_includes/_sections/_ghost.jade
@@ -7,12 +7,12 @@ section.ghost
             -each post in ghostData.posts
                 article.post.col-xs-12.col-sm-6
                     .row.middle-xs
-                        .col-xs-12.col-sm-12.col-md-6
+                        .col-xs-12.col-md-6
                             a.post-title(href="/blog#{post.url}") #{post.title}
-                        .col-xs-12.col-sm-12.col-md-6.end-md.start-xs
+                        .col-xs-12.col-md-6.end-md.start-xs
                             span.tags
                                 -each tag in post.tags
-                                    a(href="/blog/tag/#{tag.name}") #{tag.name}
+                                    a(class="#{tag.name}", href="/blog/tag/#{tag.name}") #{tag.name}
                             time(datetime="#{post.published_at}") #{post.published_at}
                     p #{post.html}
                     a.read-more(href="/blog#{post.url}") Read more
