Update github, twitter templates and styles
Fixed minor visual bugs, updated styles.

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -182,6 +182,7 @@ header.site-header {
 		padding: 3px 1em;
 		text-transform: uppercase;
 		font-weight: 400;
+		white-space: nowrap;
 	}
 
 	.tags {
