--- a/src/blog/content/themes/casper/default.hbs
+++ b/src/blog/content/themes/casper/default.hbs
@@ -43,5 +43,6 @@
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
+    <script type="text/javascript">var disqus_shortname = 'carloscuesta'; (function () {var s = document.createElement('script'); s.async = true;s.type = 'text/javascript';s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);}());</script>
 </body>
 </html>
