--- a/src/blog/content/themes/carloscuesta/default.hbs
+++ b/src/blog/content/themes/carloscuesta/default.hbs
@@ -28,8 +28,7 @@
         {{{body}}}
 
         <footer class="site-footer col-xs-12 center-xs">
-            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-            <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
+            <h3><a href="{{@blog.url}}">{{@blog.title}}</a></h3>
         </footer>
 
     </div>
