--- a/src/blog/content/themes/carloscuesta/default.hbs
+++ b/src/blog/content/themes/carloscuesta/default.hbs
@@ -19,6 +19,7 @@
     {{ghost_head}}
 </head>
 <body class="{{body_class}} nav-closed">
+	<svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <defs> <symbol id="icon-linkedin" viewbox="0 0 878 1024"> <title>linkedin</title> <path d="M199.429 357.143v566.286h-188.571v-566.286h188.571zM211.429 182.286q0.571 41.714-28.857 69.714t-77.429 28h-1.143q-46.857 0-75.429-28t-28.571-69.714q0-42.286 29.429-70t76.857-27.714 76 27.714 29.143 70zM877.714 598.857v324.571h-188v-302.857q0-60-23.143-94t-72.286-34q-36 0-60.286 19.714t-36.286 48.857q-6.286 17.143-6.286 46.286v316h-188q1.143-228 1.143-369.714t-0.571-169.143l-0.571-27.429h188v82.286h-1.143q11.429-18.286 23.429-32t32.286-29.714 49.714-24.857 65.429-8.857q97.714 0 157.143 64.857t59.429 190z" class="linkedin"></path> </symbol> <symbol id="icon-twitter" viewbox="0 0 951 1024"> <title>twitter</title> <path d="M925.714 233.143q-38.286 56-92.571 95.429 0.571 8 0.571 24 0 74.286-21.714 148.286t-66 142-105.429 120.286-147.429 83.429-184.571 31.143q-154.857 0-283.429-82.857 20 2.286 44.571 2.286 128.571 0 229.143-78.857-60-1.143-107.429-36.857t-65.143-91.143q18.857 2.857 34.857 2.857 24.571 0 48.571-6.286-64-13.143-106-63.714t-42-117.429v-2.286q38.857 21.714 83.429 23.429-37.714-25.143-60-65.714t-22.286-88q0-50.286 25.143-93.143 69.143 85.143 168.286 136.286t212.286 56.857q-4.571-21.714-4.571-42.286 0-76.571 54-130.571t130.571-54q80 0 134.857 58.286 62.286-12 117.143-44.571-21.143 65.714-81.143 101.714 53.143-5.714 106.286-28.571z" class="twitter"></path> </symbol> <symbol id="icon-github" viewbox="0 0 878 1024"> <title>github</title> <path d="M877.714 512q0 143.429-83.714 258t-216.286 158.571q-15.429 2.857-22.571-4t-7.143-17.143v-120.571q0-55.429-29.714-81.143 32.571-3.429 58.571-10.286t53.714-22.286 46.286-38 30.286-60 11.714-86q0-69.143-45.143-117.714 21.143-52-4.571-116.571-16-5.143-46.286 6.286t-52.571 25.143l-21.714 13.714q-53.143-14.857-109.714-14.857t-109.714 14.857q-9.143-6.286-24.286-15.429t-47.714-22-49.143-7.714q-25.143 64.571-4 116.571-45.143 48.571-45.143 117.714 0 48.571 11.714 85.714t30 60 46 38.286 53.714 22.286 58.571 10.286q-22.857 20.571-28 58.857-12 5.714-25.714 8.571t-32.571 2.857-37.429-12.286-31.714-35.714q-10.857-18.286-27.714-29.714t-28.286-13.714l-11.429-1.714q-12 0-16.571 2.571t-2.857 6.571 5.143 8 7.429 6.857l4 2.857q12.571 5.714 24.857 21.714t18 29.143l5.714 13.143q7.429 21.714 25.143 35.143t38.286 17.143 39.714 4 31.714-2l13.143-2.286q0 21.714 0.286 50.857t0.286 30.857q0 10.286-7.429 17.143t-22.857 4q-132.571-44-216.286-158.571t-83.714-258q0-119.429 58.857-220.286t159.714-159.714 220.286-58.857 220.286 58.857 159.714 159.714 58.857 220.286z" class="github"></path> </symbol> </defs></svg>
 
     {{navigation}}
 
@@ -27,9 +28,28 @@
         {{! Everything else gets inserted here }}
         {{{body}}}
 
-        <footer class="site-footer col-xs-12 center-xs">
-            <h3><a href="{{@blog.url}}">{{@blog.title}}</a></h3>
-        </footer>
+		<footer class="site-footer center-xs">
+			<h3>
+        		<a href="{{@blog.url}}">{{@blog.title}}</a>
+			</h3>
+		    <div class="social">
+		        <a href="https://twitter.com/{social.twitter}">
+		            <svg class="icon icon-linkedin">
+		                <use xlink:href="#icon-twitter"></use>
+		            </svg>
+		        </a>
+		        <a href="https://github.com/{social.github}">
+		            <svg class="icon icon-github">
+		                <use xlink:href="#icon-github"></use>
+		            </svg>
+		        </a>
+		        <a href="https://es.linkedin.com/in/{social.linkedin}">
+		            <svg class="icon icon-linkedin">
+		                <use xlink:href="#icon-linkedin"></use>
+		            </svg>
+		        </a>
+		    </div>
+		</footer>
 
     </div>
 
@@ -37,5 +57,7 @@
     {{ghost_foot}}
 	<script>!function(){function d(a,b,c){a.addEventListener?a.addEventListener(b,c,!1):a.attachEvent&&a.attachEvent("on"+b,c)}function e(){if(window.localStorage&&window.XMLHttpRequest)if(window.localStorage&&localStorage.font_css_cache&&localStorage.font_css_cache_file===c)f(localStorage.font_css_cache);else{var a=new XMLHttpRequest;a.open("GET",c,!0);d(a,"load",function(){4===a.readyState&&(f(a.responseText),localStorage.font_css_cache=a.responseText,localStorage.font_css_cache_file=c)});a.send()}else{var b=document.createElement("link");b.href=c;b.rel="stylesheet";b.type="text/css";document.getElementsByTagName("head")[0].appendChild(b);document.cookie="font_css_cache"}}function f(a){var b=document.createElement("style");b.innerHTML=a;document.getElementsByTagName("head")[0].appendChild(b)}var c="{{asset "css/font.css"}}";window.localStorage&&localStorage.font_css_cache||-1<document.cookie.indexOf("font_css_cache")?e():d(window,"load",e)}();</script>
     <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
+    <script type="text/javascript" src="/blog/shared/ghost-url.min.js?v=bba8679546"></script>
+    <script type="text/javascript">ghost.init({clientId: "ghost-frontend",clientSecret: "3694c304d401"});</script>
 </body>
 </html>
