Update ghost theme styles and templates
Added read more button, updated templates.

--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -138,6 +138,10 @@ article .read-more {
 	font-size: 1em;
 }
 
+article .read-more:hover {
+	color: #64B5F6;
+}
+
 .tag-template {
 	background-color: #ffffff;
 }
