--- a/src/blog/content/themes/carloscuesta/partials/loop.hbs
+++ b/src/blog/content/themes/carloscuesta/partials/loop.hbs
@@ -14,7 +14,7 @@
 		    </header>
 		    <section class="post-excerpt">
 		        <p>{{excerpt words="26"}} ...
-		    	<a class="read-more" href="{{url}}">&raquo;</a></p>
+		    	<a class="read-more" href="{{url}}"> Read more &raquo;</a></p>
 		    </section>
 		    <footer class="post-meta row">
 		    	<div class="col-xs-4 col-md-3">
