--- a/src/blog/content/themes/carloscuesta/default.hbs
+++ b/src/blog/content/themes/carloscuesta/default.hbs
@@ -33,17 +33,17 @@
         		<a href="{{@blog.url}}">{{@blog.title}}</a>
 			</h3>
 		    <div class="social">
-		        <a href="https://twitter.com/{social.twitter}">
+		        <a href="https://twitter.com/crloscuesta">
 		            <svg class="icon icon-linkedin">
 		                <use xlink:href="#icon-twitter"></use>
 		            </svg>
 		        </a>
-		        <a href="https://github.com/{social.github}">
+		        <a href="https://github.com/carloscuesta">
 		            <svg class="icon icon-github">
 		                <use xlink:href="#icon-github"></use>
 		            </svg>
 		        </a>
-		        <a href="https://es.linkedin.com/in/{social.linkedin}">
+		        <a href="https://es.linkedin.com/in/crloscuesta">
 		            <svg class="icon icon-linkedin">
 		                <use xlink:href="#icon-linkedin"></use>
 		            </svg>
