Update ghost author template and styles
Update ghost author template and styles #4

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -284,4 +284,8 @@ section h1{
 	section h1, .tweet, .repo, .post {
 		padding: 0!important;
 	}
+
+	.github .tags {
+		display: none!important;
+	}
 }
