--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -1,28 +1,30 @@
 {{!< default}}
 
-{{! The comment above "< default" means - insert everything in this file into
-    the {body} of the default.hbs template, which contains our header/footer. }}
-
-{{! Everything inside the #post tags pulls data from the post }}
 {{#post}}
 
 <header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
     <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
+        <!--{{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}-->
         {{#if @blog.navigation}}
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
         {{/if}}
     </nav>
 </header>
-
+<div class="wrap">
 <main class="content" role="main">
     <article class="{{post_class}}">
 
-        <header class="post-header">
-            <h1 class="post-title">{{title}}</h1>
+        <header class="post-header row">
+            <h1 class="post-title col-xs-12">{{title}}</h1>
             <section class="post-meta">
-                <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time> {{tags prefix=" on "}}
-                	{{#if tags}}on {{tags}}{{/if}}
+                <time class="post-date " datetime="{{date format='YYYY-MM-DD'}}">
+                	{{date format="DD MMMM YYYY"}}
+                </time>{{#if tags}}
+                	<span class="tags">
+		        		{{#foreach tags}}
+        					<a href="{{url}}" title="{{name}}" class="tag-{{name}}">{{name}}</a>
+    					{{/foreach}}
+    				</span>{{/if}}
     				<a href="{{url}}#disqus_thread">Comments</a>
             </section>
         </header>
@@ -33,7 +35,6 @@
 
         <footer class="post-footer">
 
-        {{! Everything inside the #author tags pulls data from the author }}
         {{#author}}
 
             {{#if image}}
@@ -76,11 +77,12 @@
 
         </footer>
     <div id="disqus_thread"></div>
-	<script type="text/javascript">var disqus_shortname="carloscuesta",disqus_identifier="{{post.id}}";(function(){var a=document.createElement("script");a.type="text/javascript";a.async=!0;a.src="//"+disqus_shortname+".disqus.com/embed.js";(document.getElementsByTagName("head")[0]||document.getElementsByTagName("body")[0]).appendChild(a)})();</script>
-	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </article>
+
+	<div id="disqus_thread"></div>
 </main>
 
+</div>
 <aside class="read-next">
     {{#next_post}}
     <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
@@ -92,7 +94,7 @@
     {{/next_post}}
     {{#prev_post}}
     <a class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
-        <section class="post">
+        <section class="post"
             <h2>{{title}}</h2>
             <p>{{excerpt words="19"}}&hellip;</p>
         </section>
@@ -100,4 +102,7 @@
     {{/prev_post}}
 </aside>
 
+<script type="text/javascript">var disqus_shortname="carloscuesta",disqus_identifier="{{post.id}}";(function(){var a=document.createElement("script");a.type="text/javascript";a.async=!0;a.src="//"+disqus_shortname+".disqus.com/embed.js";(document.getElementsByTagName("head")[0]||document.getElementsByTagName("body")[0]).appendChild(a)})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {{/post}}
